added check for availablesize in whole criteriaBlock